# rob-dancing

./: .gitignore  Makefile  README.md  amplitude_explanation.py  beat_analysis_demo.py  molihua_amplitude_analysis.json  pyproject.toml
examples/: README.md  basic_usage.py  beats_frame_analysis.py  example1_class_usage.py  example2_convenience_function.py  example3_step_by_step.py  simple_example.py  spectrum_analysis_example.py  spectrum_demo.py
html/: index.html  molihua_beats_analysis.json
music/: __init__.py  __main__.py  audio_visualizer.py  spectrum_analyzer.py
music/analyzer/: spectrum_analyzer.py
music/dancer/: __init__.py  dance_choreographer.py  dance_executor.py  dance_system.py  feature_to_action.py  gesture_library.py  types.py
music/dancer/__test__/: test_dance_system.py
web/: index.html
web/css/: style.css
web/data/: beats.js  dance.json  molihua_dance.json  shuangjiegun_dance.json
web/js/: robtic.js
web/statics/murder-drones-uzi-plushie/source/: Uzi.fbx
