[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["feng <yinmathematic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2"
matplotlib = "^3.8.0"
numpy = "^1.24.0"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
